# gst-switch

./: configure.ac  run-demo.sh
plugins/: Makefile.am  README-inter.txt  gstinter.c  gstinteraudiosink.c  gstinteraudiosink.h  gstinteraudiosrc.c  gstinteraudiosrc.h  gstintersubsink.c  gstintersubsink.h  gstintersubsrc.c  gstintersubsrc.h  gstintersurface.c  gstintersurface.h  gstintertest.c  gstintervideosink.c  gstintervideosink.h  gstintervideosrc.c  gstintervideosrc.h
tools/: Makefile.am  gstaudiovisual.c  gstswitchserver.c
